[gd_scene load_steps=9 format=3 uid="uid://dpoudc3ngkkcb"]

[ext_resource type="Script" uid="uid://dt1s1y32dq48s" path="res://Scripts/ending.gd" id="1_5jm55"]
[ext_resource type="Texture2D" uid="uid://jsrrxcl0h2na" path="res://Assets/SunnyLand/Layers/back.png" id="2_kg0jb"]
[ext_resource type="FontFile" uid="uid://ie70s087rr8f" path="res://Assets/GPD.otf" id="3_6u0w7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6u0w7"]
texture = ExtResource("2_kg0jb")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kg0jb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6u0w7"]
bg_color = Color(0.760784, 0.454902, 0, 0.933333)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.211765)
shadow_size = 5
shadow_offset = Vector2(0, 3.42)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bxiex"]
bg_color = Color(0.682353, 0.407843, 0, 0.862745)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.211765)
shadow_size = 5
shadow_offset = Vector2(0, 3.42)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ib4ol"]
bg_color = Color(1, 0.574454, 0.400705, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.211765)
shadow_size = 5
shadow_offset = Vector2(0, 3.42)

[node name="Ending" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1278.0
offset_bottom = 723.0
script = ExtResource("1_5jm55")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6u0w7")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -164.0
offset_top = -169.0
offset_right = 164.0
offset_bottom = -97.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_6u0w7")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_kg0jb")
theme_override_styles/hover = SubResource("StyleBoxFlat_6u0w7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bxiex")
theme_override_styles/normal = SubResource("StyleBoxFlat_ib4ol")
text = "Main Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -349.5
offset_top = -182.5
offset_right = 349.5
offset_bottom = 182.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_6u0w7")
theme_override_font_sizes/font_size = 25
text = "label1"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_6u0w7")
theme_override_font_sizes/font_size = 25

[node name="RankLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_6u0w7")
theme_override_font_sizes/font_size = 25

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
